# OmniLRS

./: .gitattributes  .gitignore  .gitmodules  README.md  auto_conf_large_scale.py  basic_rock_sampling.py  geo_clipmaps_demo.py  geo_clipmaps_demo_gpu.py  geo_clipmaps_demo_hybrid.py  geo_clipmaps_demo_hybrid_boulder.py  geo_clipmaps_demo_static.py  geo_clipmaps_demo_static_boulder.py  geometric_clip_map_demo_v2.py  geometric_clipmaps_demo_gpu.py  geometric_clipmaps_demo_hybrid.py  geometric_clipmaps_demo_hybrid_boulder.py  get_south_pole_dem.sh  illumination_test.py  license  lunalab.py  lunalab_ros1.py  lunalab_ros2.py  lunaryard.py  lunaryard_20m_ros2.py  lunaryard_40m_capture_ros2.py  lunaryard_40m_ros2.py  lunaryard_capture.py  lunaryard_ros2.py  moon_ros2.py  process_ldem.py  pyproject.toml  robot.py  run.py  terrain_generation.py  terrain_manager.py  test_collider.py  test_dynamic_colliders.py  test_dynamic_colliders_DEM.py  test_instancers.py  test_robot.py  (+4 more)
.wiki.git/: _Sidebar.md  modes.md  ros_topics.md
assets/: __init__.py
cfg/: config.yaml
docker/: Dockerfile  build_docker.sh  dockerfile  run_docker.sh
docker.spaceros/: Dockerfile  Dockerfile.bundle_isaac_sim  build.sh  entrypoint.sh  run.sh
docs/: Home.md  Installation.md  _Footer.md  _Sidebar.md  configs_2_environments.md  configs_3_modes.md  configs_4_rendering.md  deformable_terrain.md  deformable_terrain_demo.md  deformation_engine.md  env_configs.md  joy_teleop_robot.md
omnilrs.docker/: Dockerfile  build_docker.sh  entrypoint.sh  run_docker.sh
scripts/: dems_list.txt  download_only_native.sh  (+9 more)
(+1084 files in other folders)
